tests/baselines/reference/declarationInAmbientContext.errors.txt
tests/cases/conformance/es6/destructuring/declarationInAmbientContext.ts(1,13): error TS1183: Destructuring declarations are not allowed in ambient contexts.
tests/cases/conformance/es6/destructuring/declarationInAmbientContext.ts(2,13): error TS1183: Destructuring declarations are not allowed in ambient contexts.


==== tests/cases/conformance/es6/destructuring/declarationInAmbientContext.ts (2 errors) ====
    declare var [a, b];  // Error, destructuring declaration not allowed in ambient context
                ~~~~~~
!!! error TS1183: Destructuring declarations are not allowed in ambient contexts.
    declare var {c, d};  // Error, destructuring declaration not allowed in ambient context
                ~~~~~~
!!! error TS1183: Destructuring declarations are not allowed in ambient contexts.
    